# reddit-persona-validator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: advanced-security.yml  ci.yml  deploy.yml
config/: .env.example  config.yaml  proxies.json  proxy_lists.json
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  SETUP.md  TROUBLESHOOTING.md
docs/IMAGES/: .gitkeep
examples/: batch_validation_with_ai.py  comparative_analysis.py  customize_scoring_weights.py  web_scraping.py
infrastructure/: Dockerfile  compose.yml
infrastructure/terraform/: main.tf
samples/input/: .gitkeep
samples/output/: .gitkeep
src/: __init__.py
src/analysis/: __init__.py  base_analyzer.py  claude_adapter.py  claude_analyzer.py  content_extractor.py  deepseek_adapter.py  deepseek_analyzer.py  mock_analyzer.py  scorer.py
src/core/: browser_engine.py  email_verifier.py  validator.py
src/interfaces/: __init__.py  api.py  cli.py  gui.py
src/utils/: __init__.py  config_loader.py  cookie_manager.py  database.py  proxy_loader.py  proxy_rotator.py  reddit_api.py  redis_store.py
src/visualization/: __init__.py  dashboard.py
tests/: __init__.py  mock_api.py  test_proxy_loader.py
tests/integration/: test_analysis.py  test_email_checks.py  test_reddit_login.py  test_validator_integration.py
tests/unit/: test_browser_engine.py  test_config_loader.py  test_cookie_manager.py  test_email_verifier.py  test_proxies.py  test_proxy_rotator.py  test_scoring.py  (+1 more)
(+6 files in other folders)
