[project]
name = "reddit-persona-validator"
version = "1.0.0"
description = "Reddit/Hotmail persona validation system"
requires-python = ">=3.10"
dependencies = [
    "undetected-chromedriver>=3.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PySimpleGUI>=4.60.0",
    "cryptography>=41.0.0"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"
